crates/touring-hooks/tests/snapshots/snapshot_file_digest_signal__empty_source_none.snap
---
source: crates/touring-hooks/tests/snapshot_file_digest_signal.rs
expression: normalize(out)
---
~
