crates/touring-hooks/tests/snapshots/snapshot_file_digest_signal__python_simple_two_defs.snap
---
source: crates/touring-hooks/tests/snapshot_file_digest_signal.rs
expression: normalize(out)
---
- "0.53"
- "digest(6L, 2 symbols, CC avg=1 max=1)"
