crates/touring-hooks/tests/snapshots/snapshot_file_digest_signal__rust_simple_fn_no_hot.snap
---
source: crates/touring-hooks/tests/snapshot_file_digest_signal.rs
expression: normalize(out)
---
- "0.53"
- "digest(8L, 2 symbols, CC avg=1 max=1)"
