crates/touring-hooks/tests/snapshots/snapshot_file_digest_signal__rust_with_hot_function.snap
---
source: crates/touring-hooks/tests/snapshot_file_digest_signal.rs
expression: normalize(out)
---
- "1.00"
- "digest(30L, 2 symbols, CC avg=12 max=23, hot: classify)"
